gccida/c0/pent_mul_unit_conflict_cost
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_conflict_cost/src/insn-attrtab.c:33692:39: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( executing_insn, "insn-attrtab.c", 33397, "pent_mul_unit_conflict_cost"); 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_conflict_cost/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_conflict_cost/src/insn-attrtab.c:33692:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( executing_insn, "insn-attrtab.c", 33397, "pent_mul_unit_conflict_cost"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_conflict_cost/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_conflict_cost/src/insn-attrtab.c:33707:43: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( which_alternative || !mult_operator( recog_data_0.operand[3], SFmode) ) 
                                          ^~~~~~~~~~~~
                                          recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_conflict_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_conflict_cost/src/insn-attrtab.c:33715:21: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( mult_operator( recog_data_0.operand[3], SFmode) ) 
                    ^~~~~~~~~~~~
                    recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_conflict_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_conflict_cost/src/insn-attrtab.c:33724:21: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( mult_operator( recog_data_0.operand[3], XFmode) ) 
                    ^~~~~~~~~~~~
                    recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_conflict_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_conflict_cost/src/insn-attrtab.c:33731:21: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( mult_operator( recog_data_0.operand[3], TFmode) ) 
                    ^~~~~~~~~~~~
                    recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_conflict_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_conflict_cost/src/insn-attrtab.c:33740:48: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( which_alternative == 2 || !mult_operator( recog_data_0.operand[3], SFmode) ) 
                                               ^~~~~~~~~~~~
                                               recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_conflict_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_conflict_cost/src/insn-attrtab.c:33757:21: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( mult_operator( recog_data_0.operand[3], SFmode) ) 
                    ^~~~~~~~~~~~
                    recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_conflict_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_conflict_cost/src/insn-attrtab.c:33769:48: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( which_alternative == 2 || !mult_operator( recog_data_0.operand[3], DFmode) ) 
                                               ^~~~~~~~~~~~
                                               recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_conflict_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_conflict_cost/src/insn-attrtab.c:33786:21: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( mult_operator( recog_data_0.operand[3], DFmode) ) 
                    ^~~~~~~~~~~~
                    recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_conflict_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_conflict_cost/src/insn-attrtab.c:33823:21: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( mult_operator( recog_data_0.operand[3], TFmode) ) 
                    ^~~~~~~~~~~~
                    recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_conflict_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_conflict_cost/src/insn-attrtab.c:33840:21: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( mult_operator( recog_data_0.operand[3], XFmode) ) 
                    ^~~~~~~~~~~~
                    recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_conflict_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_mul_unit_conflict_cost/src/obj/insn-attrtab.o] Error 1
